--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -1,15 +1,47 @@
-#myVideo {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+:root{
+    --main-color:#d3ad7f;
+    --black:#13131a;
+    --bg:#010103;
+    --border:1.5px solid rgba(255,255,255,.3);
+}
+
+body{
+    background:black;
+}
+
+.header{
+  background: var(--bg);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 7%;
+  border-bottom: var(--border);
   position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
+  top:0; left: 0; right: 0;
+  z-index: 1000;
 }
-.myVideo{
- z-index: 1; 
+
+
+
+.header .navbar a{
+  margin:0 16px;
+  font-size: 25px;
+  color:#fff;
 }
-.img{
-  position: fixed;
-  z-index: 2;
+
+.header .navbar a:hover{
+  color:var(--main-color);
+  border-bottom: .1.5px solid var(--main-color);
+  padding-bottom: 10px;
 }
- 
+.header .icons div{
+color: #fff;
+cursor: pointer;
+font-size: medium;
+margin-left: 30px;
+}
+.header .icons div:hover{
+  color: #d3ad7f ;
+}
