--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -45,3 +45,31 @@ margin-left: 30px;
 .header .icons div:hover{
   color: #d3ad7f ;
 }
+.header .Search-box{
+  position: absolute;
+  top: 110%; right: 10%;
+  background: #fff;
+  width: 800px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+}
+.header .Search-box input{
+  height: 100%;
+  width: 100%;
+  font-size: 26px;
+  color: black;
+  padding: 15px;
+  text-transform: none;
+}
+.header .Search-box label{
+cursor: pointer;
+font-size:35px ;
+margin-right:25px ;
+color: black;
+}
+.header .Search-box label:hover{
+  color: #d3ad7f;
+}
