--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -3,8 +3,7 @@
 :root{
     --main-color:#d3ad7f;
     --black:#13131a;
-    --bg:#010103;
-    --border:1.5px solid rgba(255,255,255,.3);
+    --border:1.5px solid #d3ad7f
 }
 
 body{
