--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -11,7 +11,7 @@ body{
 }
 
 .header{
-  background: var(--bg);
+  background: black;
   display: flex;
   align-items: center;
   justify-content: space-between;
