--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -3,72 +3,107 @@
 :root{
     --main-color:#d3ad7f;
     --black:#13131a;
-    --border:1.5px solid #d3ad7f
+    --bg:#010103;
+    --border:.1rem solid rgba(255,255,255,.3);
 }
+
+*{
+    font-family: 'Roboto', sans-serif;
+    margin:0; padding:0;
+    box-sizing: border-box;
+    outline: none; border:none;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: .2s linear;
+}
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
+}
+
+
 
 body{
-    background:black;
+    background: var(--bg);
 }
 
+
+
 .header{
-  background:black;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 25px 7%;
-  border-bottom: var(--border);
-  position: fixed;
-  top:0; left: 0; right: 0;
-  z-index: 1;
+    background: var(--bg);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:1.5rem 7%;
+    border-bottom: var(--border);
+    position: fixed;
+    top:0; left: 0; right: 0;
+    z-index: 1;
 }
 
 
 
 .header .navbar a{
-  margin:0 16px;
-  font-size: 25px;
-  color:#fff;
+    margin:0 1rem;
+    font-size: 1.6rem;
+    color:#fff;
 }
 
 .header .navbar a:hover{
-  color:var(--main-color);
-  border-bottom: .1.5px solid var(--main-color);
-  padding-bottom: 10px;
+    color:var(--main-color);
+    border-bottom: .1rem solid var(--main-color);
+    padding-bottom: .5rem;
 }
+
 .header .icons div{
-color: #fff;
-cursor: pointer;
-font-size: medium;
-margin-left: 30px;
+    color:#fff;
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
 }
+
 .header .icons div:hover{
-  color: #d3ad7f ;
+    color:var(--main-color);
 }
-.header .Search-box{
-  position: absolute;
-  top: 110%; right: 10%;
-  background: #fff;
-  width: 800px;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  transform: scaleY(0);
-  transform-origin: top;
+
+
+.header .search-form{
+    position: absolute;
+    top:115%; right: 7%;
+    background: #fff;
+    width: 50rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    transform: scaleY(0);
+    transform-origin: top;
 }
-.header .Search-box input{
-  height: 100%;
-  width: 100%;
-  font-size: 26px;
-  color: black;
-  padding: 15px;
-  text-transform: none;
+
+.header .search-form.active{
+    transform: scaleY(1);
 }
-.header .Search-box label{
-cursor: pointer;
-font-size:35px ;
-margin-right:25px ;
-color: black;
+
+.header .search-form input{
+    height: 100%;
+    width: 100%;
+    font-size: 1.6rem;
+    color:var(--black);
+    padding:1rem;
+    text-transform: none;
 }
-.header .Search-box label:hover{
-  color: #d3ad7f;
+
+.header .search-form label{
+    cursor: pointer;
+    font-size: 2.2rem;
+    margin-right: 1.5rem;
+    color:var(--black);
 }
+
+.header .search-form label:hover{
+    color:var(--main-color);
+}
+
+
