--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -105,5 +105,73 @@ body{
 .header .search-form label:hover{
     color:var(--main-color);
 }
+#menu-btn{
+    display: none;
+} 
+
+.home-page{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background: url(/Coffee_House/Images/home\ page.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    padding:.9rem 3rem;
+    font-size: 1.7rem;
+    color:#fff;
+    background: var(--main-color);
+    cursor: pointer;
+}
+.home-page .content{
+    max-width: 60rem;
+
+}
+.home-page .content h3{
+    font-size: 6rem;
+    color: #fff;
+}
 
 
+
+
+
+
+
+
+@media (max-width:700px){
+    html{
+        font-size: 50%;
+    }
+    .header{
+        padding: 1.5rem 2rem;
+    }
+    #menu-btn{
+        display: inline-block;
+    }
+
+    .header .navbar{
+        position: absolute;
+        top:100%; right: -100%;
+        background: #fff;
+        width: 30rem;
+        height: 775px;
+    }
+
+    .header .navbar.active{
+        right:0;
+    }
+
+    .header .navbar a{
+        color:var(--black);
+        display: block;
+        margin:1.5rem;
+        padding:.5rem;
+        font-size: 2rem;
+    }
+   
+}
