--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -4,7 +4,7 @@
     --main-color:#d3ad7f;
     --black:#13131a;
     --bg:#010103;
-    --border:.1rem solid rgba(255,255,255,.3);
+    --border:.1rem solid #d3ad7f;
 }
 
 *{
