--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -93,12 +93,13 @@ body{
     font-size: 2.5rem;
     margin-left: 2rem;
 }
-.header .icons .cart a{
+.header .icons .cart a {
     color:#fff;
     cursor: pointer;
     font-size: 2.5rem;
-    margin-left: 4rem;
-    margin-top: 2rem;
+    margin-left: 2rem;
+    padding: 5px;
+    
     
 }
 .header .icons .cart a:hover{
