--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -26,8 +26,11 @@ html{
 
 
 body{
-    background:var(--black)
+    background:var(--black);
 }
+.cart-body {
+    background-color: #d3ad7f;
+} 
 
 
 .btn{
@@ -71,7 +74,22 @@ body{
     top:0; left: 0; right: 0;
     z-index: 1000
 }
-
+.cart-header{
+    background: var(--black);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:1.5rem 7%;
+    border-bottom: black;
+    position: relative;
+    top:0; left: 0; right: 0;
+    z-index: 1000
+}
+.cart-header .cart-navbar a{
+    margin:0 1rem;
+    font-size: 1.6rem;
+    color:#fff;
+}
 
 
 .header .navbar a{
@@ -85,8 +103,19 @@ body{
     border-bottom: .1rem solid var(--main-color);
     padding-bottom: .5rem;
 }
+.cart-header .cart-navbar a:hover{
+    color:var(--main-color);
+    border-bottom: .1rem solid var(--main-color);
+    padding-bottom: .5rem;
+}
 
 .header .icons div{
+    color:#fff;
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
+}
+.cart-header .icons div{
     color:#fff;
     cursor: pointer;
     font-size: 2.5rem;
@@ -98,20 +127,41 @@ body{
     font-size: 2.5rem;
     margin-left: 2rem;
     padding: 2rem;
-    
-    
+  
+}
+.cart-header .icons a{
+    color:#fff;
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
+    padding: 2rem;
 }
 .header .icons .cart a:hover{
     color: var(--main-color);
 }
-
+.cart-header .icons .cart a:hover{
+    color: var(--main-color);
+}
 .header .icons div:hover{
     color:var(--main-color);
 }
-
+.cart-header .icons div:hover{
+    color: var(--main-color);
+}
 
 
 .header .search-form{
+    position: absolute;
+    top:115%; right: 7%;
+    background: #fff;
+    width: 50rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    transform: scaleY(0);
+    transform-origin: top;
+}
+.cart-header .search-form{
     position: absolute;
     top:115%; right: 7%;
     background: #fff;
@@ -126,8 +176,19 @@ body{
 .header .search-form.active{
     transform: scaleY(1);
 }
+.cart-header .search-form.active{
+    transform: scaleY(1);
+}
 
 .header .search-form input{
+    height: 100%;
+    width: 100%;
+    font-size: 1.6rem;
+    color:var(--black);
+    padding:1rem;
+    text-transform: none;
+}
+.cart-header .search-form input{
     height: 100%;
     width: 100%;
     font-size: 1.6rem;
@@ -142,11 +203,20 @@ body{
     margin-right: 1.5rem;
     color:var(--black);
 }
+.cart-header .search-form label{
+    cursor: pointer;
+    font-size: 2.2rem;
+    margin-right: 1.5rem;
+    color:var(--black);
+}
+
 
 .header .search-form label:hover{
     color:var(--main-color);
 }
-
+.cart-header .search-form label:hover{
+    color: var(--main-color);
+}
 
 
 
@@ -252,7 +322,7 @@ h5{
     cursor: pointer;
 }
 .products-container ion-icon:hover{
-    color:var(--main-color);
+    color:var(--bg);
 }
 
  .product-header{
@@ -260,7 +330,7 @@ h5{
      max-width: 650px;
      display: flex;
      justify-content: flex-start;
-     border-bottom: 4px solid var(--main-color);
+     border-bottom: 4px solid var(--black);
      margin: 0 auto;
  }
  .title{
@@ -277,13 +347,13 @@ h5{
  }
  .quantity{
      width: 30%;
-     border-bottom: 1px solid var(--main-color) ;
+     border-bottom: 1px solid var(--black) ;
      display: flex;
      align-items: center;
  }
 .total{
     width: 10%;
-    border-bottom: 1px solid var(--main-color);
+    border-bottom: 1px solid var(--bg);
     display: flex;
     align-items: center;
 } 
@@ -294,7 +364,7 @@ h5{
     justify-content: space-around;
     align-items: center;
     padding: 10px 0;
-    border-bottom: 1px solid var(--main-color);
+    border-bottom: 1px solid var(--bg);
  }
  
 .spancolor{
