--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -49,7 +49,19 @@ body{
     background: var(--main-color);
     cursor: pointer;
 }
-
+.check-out-btn-1{
+    margin-top: 1rem;
+    display: inline-block;
+    padding:.9rem 3rem;
+    font-size: 1.7rem;
+    color:#fff;
+    background: var(--main-color);
+    cursor: pointer; 
+    border-radius: 10px; 
+}
+.check-out-btn-1:hover {
+    color: var(--black);
+}
 
 .check-out-btn{
     margin-top: 1rem;
@@ -358,6 +370,38 @@ h5{
 
 
 /*--------- cart web---------*/
+
+/*--------- check-out web---------*/
+.check-out-body{
+    min-height: 100vh;
+    align-items: center;
+    background: url(/Coffee_House/Images/background.jfif);
+    background-size: cover;
+    background-position: center;
+}
+.CheckOut div{
+    color: white;
+    font-size: 30px;
+    
+}
+
+.CheckOut .Fname input{ 
+    margin-left: 10px; 
+}
+.CheckOut .Lname  input{
+    margin-left: 10px;
+}
+.CheckOut .Email{
+    margin-left: 30px;
+}
+.CheckOut .Email input{
+    margin-left: 40px;
+    width: 25%;
+}
+
+/*--------- check-out web---------*/
+
+
 
 
 @media (max-width:700px){
