--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -399,9 +399,9 @@ h5{
    
 }
 
-.CheckOut .address input{
+.CheckOut .address #address{
    
-    height: 90px;
+    height: 170px;
     width: 80%;
 }
 
