--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -351,7 +351,7 @@ h5{
 
 .product ion-icon {
     cursor: pointer;
-    
+    font-size: 4rem;
 }
 
 .products {
@@ -361,7 +361,9 @@ h5{
 }
 
 .products img {
-    width: 75px;
+    width: 100px;
+margin-right: 20px;
+margin-left: 20px;
 }
 
  
