--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -379,49 +379,54 @@ h5{
 
 
 /*--------- check-out web---------*/
-.check-out-body{
+.home{
     min-height: 100vh;
-    display:flex;
-    background: url(/Coffee_House/Images/photo-1572976993240-ee51181680be.jfif);
+    display: flex;
+    background: url(/Coffee_House/Images/home\ page.jpg);
     background-size: cover;
     background-position: center;
 }
-.CheckOut div{
-    color: white;
-    font-size: 30px;
 
-}
-
-.CheckOut .Fname input{ 
-    margin-left: 10px; 
-    margin-top: 100px;
+.wrapper{
+    width: 75%; 
+    height: 75%;
+    padding: 25px;
     
 }
-.CheckOut .Lname  input{
-    margin-left: 10px;
-}
-.CheckOut .Email{
-    margin-left: 30px;
-}
-.CheckOut .Email input{
-    margin-left: 40px;
-    width: 60%;
+.wrapper h2{
+    
+    color: #d3ad7f;
+    font-size: 25px;
+    padding: 10px;
+    margin-bottom: 20px;
+    
+
 }
 
-.CheckOut .phone #countryCode{
-    margin-left: 10px;
-    background-color: black;
+.wrapper h4{
+    color: #d3ad7f;
+    font-size: 20px;
+}
+
+.wrapper .input-Gbox label {
+  color: #fff;
+  font-size: 20px;
+}
+
+
+.wrapper .input-Pgroup label{
     color: #fff;
-}
-.CheckOut .phone input{
-    margin-left: 10px;
-   
+    font-size: 20px;
 }
 
-.CheckOut .address #address{
-   
-    height: 170px;
-    width: 80%;
+.wrapper .input-Pgroup i {
+    color: black ;
+    font-size: 25px;
+}
+
+
+.wrapper ion-icon{
+font-size: 25px;
 }
 
 .check-out-btn-1{
@@ -438,8 +443,6 @@ h5{
 .check-out-btn-1:hover {
     color: var(--black);
 }
-
-
 /*--------- check-out web---------*/
 
 
