--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -99,7 +99,7 @@ body{
     
 }
 
-.header .icons .cart a {
+.header .icons #cart  {
     color:#fff;
     cursor: pointer;
     font-size: 2.5rem;
@@ -107,7 +107,7 @@ body{
     
 }
 
-.header .icons .cart a:hover{
+.header .icons #cart :hover{
     color: var(--main-color);
 }
 
@@ -117,6 +117,8 @@ body{
 .header .icons div:hover{
     color:var(--main-color);
 }
+
+
 
 
 
@@ -192,7 +194,7 @@ body{
 .menu-section .box-contanier{
     display: grid; 
   grid-template-columns: 1fr 1fr 1fr; 
-  grid-template-rows: 1fr 1fr 1fr; 
+  grid-template-rows: 1fr 1fr ; 
   gap: auto auto ; 
   grid-template-areas: 
     "div1 div2 div3"
@@ -223,10 +225,10 @@ body{
     color:var(--black);
 }
 .footer{
-    background: black;
+    background: #2B2B2B;
     text-align: center;
     position: relative;
-    bottom: 0;
+    
 }
 .footer .cont{
     padding: 1rem 0;
@@ -234,8 +236,7 @@ body{
 .footer .cont a{
 margin: 2rem;
 height: 5rem;
-width: 5rem;
-line-height: 5rem;
+width: 50rem;
 color: white;
 font-size: 4rem;
 }
@@ -457,14 +458,9 @@ font-size: 25px;
     
     #menu-btn{
         display: inline-block;
-        padding-left: 36px;
-        margin-top: 10px;
     }
 
-    #search-btn{
-        margin-bottom: 10px;
-        padding-left: 36px;
-    }
+   
 
 
 
