--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -157,6 +157,13 @@ body{
     color:var(--black);
 }
 
+.header .profile a {
+    color:#fff;
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
+   
+}
 
 
 .header .search-form label:hover{
