--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -180,7 +180,7 @@ body{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(/Coffee_House/Images/home\ page.jpg);
+    background: url(/Images/home\ page.jpg);
     background-size: cover;
     background-position: center;
 
