--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -455,13 +455,12 @@ font-size: 25px;
 
 
 
-@media (max-width:700px){
+@media only screen and (max-width:768px){
     html{
         font-size: 50%;
     }
     .header{
-        padding: 1.5rem 2rem;
-    }
+        padding: 1.5rem 2rem;     }
     
     #menu-btn{
         display: inline-block;
@@ -512,16 +511,25 @@ font-size: 25px;
   .div5 { grid-area: div5; }
   .div6 { grid-area: div6; }
 
-}
-.check-out-btn{
+  .check-out-btn{
     margin-right:20px; ;
 }
 
+}
 
-@media (max-width:480px){
+
+
+@media screen and (min-width:280px){
 
 .product ion-icon {
-    font-size: 40px;
+    font-size: 30px;
     }   
+    .product img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        
+        
+    }
 
 }
