--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -389,7 +389,7 @@ h5{
 .home{
     min-height: 100vh;
     display: flex;
-    background-image: url(/Images/);
+    background-image: url(/Images/madii.png);
     background-size: cover;
     background-position: center;
 }
@@ -397,10 +397,11 @@ h5{
 
 
 .wrapper{
-    width: 75%; 
-    height: 75%;
-    padding: 25px;
-   
+    margin: auto;
+    width: 75%;
+    border: #d3ad7f solid 1px;
+    padding: 10px;
+  
   
     
 }
@@ -409,13 +410,13 @@ h5{
     color: #d3ad7f;
     font-size: 25px;
     padding: 10px;
-    margin-bottom: 20px;
+    text-align: center;
     
 
 }
 
 .wrapper h4{
-    color: #8B4513;
+    color: #A89379;
     font-size: 20px;
 }
 
@@ -431,13 +432,15 @@ h5{
 }
 
 .wrapper .input-Pgroup i {
-    color: black ;
+    color: #937958;
     font-size: 25px;
 }
 
 
 .wrapper ion-icon{
 font-size: 25px;
+ color: #937958;
+
 }
 
 .check-out-btn-1{
