--- a/Coffee_House/CSS/Style.css
+++ b/Coffee_House/CSS/Style.css
@@ -459,7 +459,46 @@ font-size: 25px;
 }
 /*--------- check-out web---------*/
 
+/*--------- employee web---------*/
 
+
+.login{
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------- employee web---------*/
 
 
 @media only screen and (max-width:768px){
